--- a/restaurants/templates/list.html
+++ b/restaurants/templates/list.html
@@ -5,6 +5,15 @@
         <title>List</title>
     </head>
     <body>
-
+		{% for list in my_list %}
+        <ul>
+            <li>
+                <h1 style="color:blue">{{list.restaurant_name}}</h1>
+            </li>
+            <li>
+                <p>{{list.food_type}}</p>
+            </li>
+        </ul><br>
+    {% endfor %}
     </body>
 </html>
